--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "open": "start http://localhost:5000",
+    "dev": "npm run open && nodemon index"
   },
   "repository": {
     "type": "git",
